Closed
Bug 224478
Opened 22 years ago
Closed 22 years ago
-moz-opacity: 1.1 makes transparent GIF color appear black
Categories
(Core :: CSS Parsing and Computation, defect, P2)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla1.6beta
People
(Reporter: zbraniecki, Assigned: dbaron)
References
()
Details
(Whiteboard: [patch])
Attachments
(2 files)
92.60 KB,
image/png
|
Details | |
1.33 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
In Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6a) Gecko/20031102 Firebird/0.7+
At alladyn.art.pl menu gif's backgrounds are black. Probably it's caused by fix
from bug 201209.
Reporter | ||
Comment 1•22 years ago
|
||
Comment 2•22 years ago
|
||
I see the same problem with a new CVS build (approx. 2003110212) on Windows ME
while Mozilla 1.6a release WFM.
This could be a regression from bug 212366 rather then 201209.
Changing Hardware/OS to All/All
OS: Linux → All
Hardware: PC → All
Comment 3•22 years ago
|
||
Changing the summary to more appropriate...
Summary: GTK2 works strange with GIFs → Transparent GIF color seen as black
Assignee | ||
Comment 4•22 years ago
|
||
I wonder if this is related to being in a DIV with '-moz-opacity: 1.1'.
Assignee | ||
Comment 5•22 years ago
|
||
css3-color says opacity should be clamped to the range [0.0,1.0], and doing so
fixes this bug.
Assignee: blizzard → dbaron
Component: GFX: Gtk → Style System (CSS)
Summary: Transparent GIF color seen as black → -moz-opacity: 1.1 makes transparent GIF color appear black
Assignee | ||
Comment 6•22 years ago
|
||
Assignee | ||
Comment 7•22 years ago
|
||
Comment on attachment 134667 [details] [diff] [review]
patch
I think this is the right fix since
http://www.w3.org/TR/2003/CR-css3-color-20030514/#transparency says the
computed value should be modified.
Attachment #134667 -
Flags: superreview?(roc)
Attachment #134667 -
Flags: review?(roc)
Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [patch]
Target Milestone: --- → mozilla1.6beta
Comment on attachment 134667 [details] [diff] [review]
patch
good catch
Attachment #134667 -
Flags: superreview?(roc)
Attachment #134667 -
Flags: superreview+
Attachment #134667 -
Flags: review?(roc)
Attachment #134667 -
Flags: review+
Assignee | ||
Comment 9•22 years ago
|
||
Fix checked in, 2003-11-02 14:40 -0800.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•