Clamp -moz-opacity to the range [0.0,1.0].  b=224478  r+sr=roc